加入寄信，小BUG修改